--- a/index.html
+++ b/index.html
@@ -411,7 +411,13 @@ span:nth-child(18) {
 <!--Brian Tracy-->
 
   <section  class="features">
-    <div class="feature card">
+    <div class="feature card" style=" background: #6a85b6;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5))">
       <ul>
       <i class="fa fa-university"></i>
       <h2>ADMISSION GUIDANCE</h2>
@@ -423,9 +429,15 @@ courses available according to their interests <br>
 the right college or university that follows best of
 the teaching practices, safe and secure</p></li> 
     </div></ul>
-    <div class="feature card">
+    <div class="feature card" style="background: #d4fc79;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5))">
       <ul>
-      <img src="/images/carrer.png" alt="" class="choose-icon" >
+      <img src="images/carrer.png" alt="" class="choose-icon" >
       <h2>CAREER COUNSELLING</h2>
       <li><p>We provide career counselling to our students by
 helping them to choose the right course that helps
@@ -436,9 +448,11 @@ about trending and upcoming careers according to
 the industry</p></li>
 </ul>
     </div>
-     <div class="feature card">
+     <div class="feature card" style="    background: #f6d365;
+     background: -webkit-linear-gradient(to right, rgba(246,211,101,0.5), rgba(253,160,133,0.5));
+   background: linear-gradient(to right, rgba(246,211,101,0.5), rgba(253,160,133,0.5))">
       <ul>
-      <img src="/images/approval.png" alt="" class="choose-icon" >
+      <img src="images/approval.png" alt="" class="choose-icon" >
       <h2>PERSONALITY TESTING</h2>
       <li><p>We help the students to analyse their weaknesses
 and help them to overcome their Jaws</p></li>
@@ -448,7 +462,14 @@ interdisciplinary skills and assist in personality
 enhancement of students</p></li>
 </ul>
     </div>
-    <div class="feature card">
+    <div class="feature card" style=" /* fallback for old browsers */
+    background: #4facfe;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(79,172,254,0.5), rgba(0,242,254,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(79,172,254,0.5), rgba(0,242,254,0.5))">
       <ul>
         <i class="fa-solid fa-headset"></i>
       <h2>24*7 Support</h2>
@@ -456,9 +477,15 @@ enhancement of students</p></li>
   
 </ul>
     </div>
-     <div class="feature card">
+     <div class="feature card" style="  background: #feada6;
+  
+     /* Chrome 10-25, Safari 5.1-6 */
+     background: -webkit-linear-gradient(to right, rgba(254,173,166,0.5), rgba(245,239,239,0.5));
+   
+     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+     background: linear-gradient(to right, rgba(254,173,166,0.5), rgba(245,239,239,0.5))">
       <ul>
-      <i class="fas fa-star"></i>
+        <img src="images/scholarship.png" alt="" class="choose-icon" >
       <h2>SCHOLARSHIPS</h2>
       <li><p>We give exclusive information about different
 types of scholarships available for both Karnataka
@@ -467,7 +494,13 @@ and Non-Karnataka students</p></li>
 
 </ul>
     </div>
-     <div class="feature card">
+     <div class="feature card" style=" background: #a6c0fe;
+  
+     /* Chrome 10-25, Safari 5.1-6 */
+     background: -webkit-linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5));
+   
+     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+     background: linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>CAREER OPTIONS
@@ -479,7 +512,13 @@ careers according to their interests</p></li>
 Investment (ROI) jobs and highest salary packages</p></li>
 </ul>
     </div>
-     <div class="feature card">
+    <div class="feature card" style=" background: #6a85b6;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>CAREER ADVANCEMENT TRAINING</h2>
@@ -490,7 +529,13 @@ professionals with career advancement training</p></li>
 them to upgrade their career graphs</p></li>
 </ul>
     </div>
-     <div class="feature card">
+    <div class="feature card" style="background: #d4fc79;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>INTERVIEW TRAINING</h2>
@@ -504,7 +549,9 @@ behaviour,FAQs etc.
 </p></li>
 </ul>
     </div>
-     <div class="feature card">
+    <div class="feature card" style="    background: #f6d365;
+    background: -webkit-linear-gradient(to right, rgba(246,211,101,0.5), rgba(253,160,133,0.5));
+  background: linear-gradient(to right, rgba(246,211,101,0.5), rgba(253,160,133,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>MOCK INTERVIEW</h2>
@@ -517,7 +564,14 @@ students and try to to give them real-time interview
 experience</p></li>
 </ul>
     </div>
-       <div class="feature card"> <ul>
+    <div class="feature card" style=" /* fallback for old browsers */
+    background: #4facfe;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(79,172,254,0.5), rgba(0,242,254,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(79,172,254,0.5), rgba(0,242,254,0.5))"> <ul>
       <i class="fas fa-users"></i>
       <h2>COMPETITIVE EXAM TRAINING
 </h2>
@@ -528,7 +582,13 @@ tips etc.</p></li>
 <li><p>Our students will be given expert guidance about
 the entrance exams from experts</p></li></ul>
     </div>
-     <div class="feature card">
+    <div class="feature card" style="  background: #feada6;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(254,173,166,0.5), rgba(245,239,239,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(254,173,166,0.5), rgba(245,239,239,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>MERIT ASSISTANCE</h2>
@@ -542,7 +602,13 @@ them in online choose Olling options for various
 admissions</p></li>
 </ul>
     </div>
-     <div class="feature card">
+    <div class="feature card" style=" background: #a6c0fe;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>APPLICATION ASSISTANCE</h2>
@@ -555,7 +621,13 @@ involved in online application procedures in
 various admissions</p></li>
 </ul>
     </div>
-     <div class="feature card">
+    <div class="feature card" style=" background: #6a85b6;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>DIRECT ADMISSION</h2>
@@ -569,7 +641,13 @@ admissions procedures followed in various
 colleges for direct admissions</p></li>
 </ul>
     </div>
-     <div class="feature card">
+    <div class="feature card" style="background: #d4fc79;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>SEAT RESERVATION</h2>
@@ -583,7 +661,14 @@ and colleges. This saves them from losing the
 opportunity</p></li>
 </ul>
     </div>
-        <div class="feature card">
+    <div class="feature card" style=" /* fallback for old browsers */
+    background: #4facfe;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(79,172,254,0.5), rgba(0,242,254,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(79,172,254,0.5), rgba(0,242,254,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>COURSE SELECTIONS</h2>
@@ -595,7 +680,13 @@ the analysis</p></li>
 strategies that are essential to choose the course</p></li>
 </ul>
     </div>
-        <div class="feature card">
+    <div class="feature card" style="  background: #feada6;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(254,173,166,0.5), rgba(245,239,239,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(254,173,166,0.5), rgba(245,239,239,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>COLLEGES COMPARISONS</h2>
@@ -608,7 +699,13 @@ by the whatisnext team, so that the students
 can make the Onal decision</p></li>
 </ul>
     </div>
-        <div class="feature card">
+    <div class="feature card" style=" background: #a6c0fe;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>BANK LOAN ASSISTANCE</h2>
@@ -621,7 +718,13 @@ Explaining for the criteria for availing education
 loan.</p></li>
 </ul>
     </div>
-        <div class="feature card">
+    <div class="feature card" style=" background: #6a85b6;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>INDUSTRY EXPECTATIONS AND TRENDS</h2>
@@ -633,7 +736,13 @@ requirements and help them to adapt to the
 changing industry needs</p></li>
 </ul>
     </div>
-        <div class="feature card">
+    <div class="feature card" style="background: #d4fc79;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>PLACEMENTS</h2>
@@ -645,7 +754,13 @@ team helps our students in getting placed in
 different companies based on their interests</p></li>
 </ul>
     </div>
-        <div class="feature card">
+    <div class="feature card" style="  background: #feada6;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(254,173,166,0.5), rgba(245,239,239,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(254,173,166,0.5), rgba(245,239,239,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>TRAVEL ASSISTANCE</h2>
@@ -658,7 +773,13 @@ different parts of the country, mode of transport to
 reach college campus in Bangalore etc.</p></li>
 </ul>
     </div>
-        <div class="feature card">
+    <div class="feature card" style=" background: #a6c0fe;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>ACCOMMODATION</h2>
@@ -672,7 +793,13 @@ accommodations around the colleges after they
 got admissions</p></li>
 </ul>
     </div>
-        <div class="feature card">
+    <div class="feature card" style=" background: #6a85b6;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>VISA ASSISTANCE</h2>
@@ -685,7 +812,13 @@ students for selected countries</p></li>
 </ul>
     </div>
         
-        <div class="feature card">
+    <div class="feature card" style=" background: #a6c0fe;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5))">
       <ul>
       <i class="fas fa-star"></i>
       <h2>CAMPUS VISITS</h2>
@@ -698,7 +831,13 @@ students to provide guidance about the campus</p></li>
     </div>
 
     
-    <div class="feature card" > <ul>
+    <div class="feature card" style=" background: #6a85b6;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5))"> <ul>
       <i class="fas fa-users"></i>
       <h2>APTITUDE TESTING
 </h2>
@@ -738,21 +877,21 @@ font-weight: 600;
   margin-bottom: 50px;
   padding: 20px;
   border-radius: 10px;
-  background-color: #f2f2f2;
+ 
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .feature i {
   font-size: 48px;
   margin-bottom: 20px;
-  color: #2b3b7b;
+  color: #000000;
 }
 
 .feature h2 {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
-  color: #000000;
+  color: #0e0d0d;
 }
 
 .feature p {
@@ -810,9 +949,7 @@ font-weight: 600;
   width: 300px;
   margin: 10px;
   padding: 10px;
- -webkit-box-shadow: 10px 10px 5px 0px rgba(138,134,184,1);
--moz-box-shadow: 10px 10px 5px 0px rgba(138,134,184,1);
-box-shadow: 10px 10px 5px 0px rgba(138,134,184,1);
+  
 }
 
 #load-more-btn {
