--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ enhancement of students</p></li>
      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
      background: linear-gradient(to right, rgba(254,173,166,0.5), rgba(245,239,239,0.5))">
       <ul>
-        <img src="images/scholarship.png" alt="" class="choose-icon" >
+        <img src="images/degree.png" alt="" class="choose-icon" >
       <h2>SCHOLARSHIPS</h2>
       <li><p>We give exclusive information about different
 types of scholarships available for both Karnataka
@@ -502,7 +502,7 @@ and Non-Karnataka students</p></li>
      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
      background: linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5))">
       <ul>
-      <i class="fas fa-star"></i>
+        <img src="images/business.png" alt="" class="choose-icon" >
       <h2>CAREER OPTIONS
 </h2>
       <li><p>We guide the students in choosing the right
@@ -537,7 +537,7 @@ them to upgrade their career graphs</p></li>
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5))">
       <ul>
-      <i class="fas fa-star"></i>
+        <img src="images/job-interview.png" alt="" class="choose-icon" >
       <h2>INTERVIEW TRAINING</h2>
       <li><p>Our students will be trained with exclusive
 interview skills to build conOdence in cracking any
@@ -553,7 +553,7 @@ behaviour,FAQs etc.
     background: -webkit-linear-gradient(to right, rgba(246,211,101,0.5), rgba(253,160,133,0.5));
   background: linear-gradient(to right, rgba(246,211,101,0.5), rgba(253,160,133,0.5))">
       <ul>
-      <i class="fas fa-star"></i>
+        <img src="images/interview.png" alt="" class="choose-icon" >
       <h2>MOCK INTERVIEW</h2>
       <li><p>Our experts from different professional
 backgrounds will prepare the students for
@@ -572,7 +572,7 @@ experience</p></li>
   
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(79,172,254,0.5), rgba(0,242,254,0.5))"> <ul>
-      <i class="fas fa-users"></i>
+     <img src="images/examination.png" alt="" class="choose-icon" >
       <h2>COMPETITIVE EXAM TRAINING
 </h2>
       <li><p>We provide our students with
@@ -590,7 +590,7 @@ the entrance exams from experts</p></li></ul>
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(254,173,166,0.5), rgba(245,239,239,0.5))">
       <ul>
-      <i class="fas fa-star"></i>
+        <img src="images/interview.png" alt="" class="choose-icon" >
       <h2>MERIT ASSISTANCE</h2>
       <li><p>We guide them with in-depth details about the
 merit admission process and help our students to
@@ -610,7 +610,7 @@ admissions</p></li>
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(166,192,254,0.5), rgba(246,128,132,0.5))">
       <ul>
-      <i class="fas fa-star"></i>
+        <img src="images/interview.png" alt="" class="choose-icon" >
       <h2>APPLICATION ASSISTANCE</h2>
       <li><p>Our admission oVcers assist the candidates on all
 stages of application submission to their preferred
@@ -629,7 +629,7 @@ various admissions</p></li>
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(106,133,182,0.5), rgba(186,200,224,0.5))">
       <ul>
-      <i class="fas fa-star"></i>
+        <img src="images/admission.png" alt="" class="choose-icon" >
       <h2>DIRECT ADMISSION</h2>
       <li><p>We are oVcial admission partners for top colleges
 and universities and are authorised to
@@ -649,7 +649,7 @@ colleges for direct admissions</p></li>
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(212,252,121,0.5), rgba(150,230,161,0.5))">
       <ul>
-      <i class="fas fa-star"></i>
+        <img src="images/cinema-seat.png" alt="" class="choose-icon" >
       <h2>SEAT RESERVATION</h2>
       <li><p>We guide our students with detailed information
 involved in seat reservations for their chosen
