--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,11 @@ Application Form
 </div>
 </div>
 </div>
+
 </footer>
+<p style="color: #fef8f8;">
+  © All rights reserved by Ind Edu Hub Private Limited
+</p>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/tiny-slider.js"></script>
 <script src="js/glightbox.min.js"></script>
