--- a/index.html
+++ b/index.html
@@ -285,30 +285,45 @@ typewriter();
 <div class="row">
   <div class="col-md-6 mt-3 mb-3">
       <div class="mission-para " data-aos="fade-up">
-    <h2 class="mission-para" data-aos="fade-up" >Mission</h2> </div>
+    <h2 class="mission-para" data-aos="fade-up" >Mission</h2><hr> </div>
+    <br>
     <p id="mission-para"> India is a knowledge economy, one that creates, disseminates, and uses knowledge to enhance its growth and development. The Team of Whatisnext believe that knowledge can empower the youth into a national asset by providing proper education and guidance.</p>
   </div>
  
   <div class="col-md-6 mt-3 mb-3 " >
       <div  data-aos="fade-up">
-    <h2 class="mission-para " data-aos="fade-up"  >Vission</h2> </div>
+    <h2 class="mission-para " data-aos="fade-up"  >Vission</h2>  <hr/></div>
+   <br>
     <p id="mission-para" >At Whatisnext.in, we are passionate about education and believe that it is the key to unlocking a world of opportunities. We are dedicated to helping our clients succeed and reach their full potential.</p>
   </div>
 </div>
 </div>
 
 </section>
- 
-<header><h1>
+ <style>
+hr{
+  border: none;
+  border-top: 3px solid #180c86;
+  width: 150px;
+  margin: 0;
+  float: left;
+}
+ </style>
+<header><h1 class="hrr">
   <span>Why</span>
   <span>Choose</span>
   <span>Us</span>
   <span>?</span>
-  
+  <hr >
 </h1></header>
 
 <style>
-  
+  .hrr {
+    margin: 1rem 0;
+    color: inherit;
+    background-color: currentColor;
+    border: 0;
+    opacity: 0.25; }
 h1 {
   font-family: "Montserrat Medium";
   
@@ -1396,9 +1411,7 @@ Application Form
 </div>
 
 </footer>
-<p style="color: #fef8f8;">
-  © All rights reserved by Ind Edu Hub Private Limited
-</p>
+
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/tiny-slider.js"></script>
 <script src="js/glightbox.min.js"></script>
@@ -1406,16 +1419,5 @@ Application Form
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 <script src="js/google-map.js"></script>
 <script src="js/main.js"></script>
-
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-<script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-23581568-13');
-    </script>
-
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"7a4c07564ff44b98","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2023.2.0","si":100}' crossorigin="anonymous"></script> -->
 </body>
 </html>
