--- a/index.html
+++ b/index.html
@@ -304,26 +304,21 @@ typewriter();
 hr{
   border: none;
   border-top: 3px solid #180c86;
-  width: 150px;
+  width: 160px;
   margin: 0;
   float: left;
 }
  </style>
-<header><h1 class="hrr">
+<header><h1 >
   <span>Why</span>
   <span>Choose</span>
   <span>Us</span>
   <span>?</span>
-  <hr >
+  
 </h1></header>
 
 <style>
-  .hrr {
-    margin: 1rem 0;
-    color: inherit;
-    background-color: currentColor;
-    border: 0;
-    opacity: 0.25; }
+
 h1 {
   font-family: "Montserrat Medium";
   
@@ -467,7 +462,7 @@ enhancement of students</p></li>
       <ul>
         <img src="images/24-hours-support.png" alt="" class="choose-icon" >
       <h2>24*7 Support</h2>
-      <li><p>We help be available from monday to saturday between 9 AM to 6 PM.kKindly contact us if you have any queries,we are there to assist you.</p></li>
+      <li><p>We help be available from monday to saturday between 9 AM to 6 PM.Kindly contact us if you have any queries,we are there to assist you.</p></li>
   
 </ul>
     </div>
