--- a/index.html
+++ b/index.html
@@ -1380,7 +1380,7 @@ window.onclick = function(event) {
 <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Terms &amp; Conditions</a></li>
 <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Feedbacks</a></li>
 <li><a href="images/Whatisnext.in Application Form 23-24 (3).pdf" download><span class="ion ion-ios-arrow-round-forward me-2"></span>
-Application Form
+  scholarship Form
 </a></li>
 </ul>
 </div>
@@ -1405,13 +1405,21 @@ Application Form
 </div>
 </div>
 
+<div class="col-md-12 text-center">
+  <p class="mb-0 mt-0" style="font-size: 14px; color: #d7d7d7;">&copy;2023 whatisnext. All Rights Reserved </p>
+  </div>
+
+
+
+
+</div>
 </footer>
 
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/tiny-slider.js"></script>
-<script src="js/glightbox.min.js"></script>
+
 <script src="js/aos.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+
 <script src="js/google-map.js"></script>
 <script src="js/main.js"></script>
 </body>
