--- a/courses.html
+++ b/courses.html
@@ -344,12 +344,12 @@
   <div class="ftco-footer-widget mb-4">
   <h2 class="ftco-heading-2 logo d-flex">
     <section class=" logo-footer">
-      <img src="images/mes blue.png" class="footer-logo">
+      <img src="images/white logo.png" class="footer-logo">
   </section>
   
   </a>
   </h2>
-  <p>Whatisnext.in mentors have shaped the future of 3000+ students and working professionals based on their skill, background and dream.</p>
+  <p style="color: #d5d5d5;">Whatisnext.in mentors have shaped the future of 3000+ students and working professionals based on their skill, background and dream.</p>
   <ul class="ftco-footer-social list-unstyled mt-2">
   <li><a href="https://www.linkedin.com/company/whatisnext-in/"><span class="fa fa-linkedin"></span></a></li>
   <li><a href="https://www.facebook.com/profile.php?id=100066432039919&mibextid=LQQJ4d"><span class="fa fa-facebook"></span></a></li>
@@ -365,6 +365,7 @@
   <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Services</a></li>
   <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Courses</a></li>
   <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Contact us</a></li>
+  
   </ul>
   </div>
   </div>
@@ -375,10 +376,15 @@
   <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Contact Us</a></li>
   <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Terms &amp; Conditions</a></li>
   <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Feedbacks</a></li>
+  <li><a href="images/Whatisnext.in Application Form 23-24 (3).pdf" download><span class="ion ion-ios-arrow-round-forward me-2"></span>
+    scholarship Form
+  </a></li>
   </ul>
   </div>
   </div>
-  
+  <style>
+      
+  </style>
   <div class="col-md-6 col-lg">
   <div class="ftco-footer-widget mb-4">
   <h2 class="ftco-heading-2">Have a Questions?</h2>
@@ -394,6 +400,15 @@
   </div>
   </div>
   </div>
+  </div>
+  
+  <div class="col-md-12 text-center">
+    <p class="mb-0 mt-0" style="font-size: 14px; color: #d7d7d7;">&copy;2023 whatisnext. All Rights Reserved </p>
+    </div>
+  
+  
+  
+  
   </div>
   </footer>
 <script src="js/bootstrap.bundle.min.js"></script>
