--- a/index.html
+++ b/index.html
@@ -283,16 +283,16 @@ typewriter();
 <section class="Vission" >
   <div class="container " style="background-image: url('images/w2.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
 <div class="row">
-  <div class="col-md-6 mt-3 mb-3">
+  <div class="col-md-6 mt-5 mb-1">
       <div class="mission-para " data-aos="fade-up">
-    <h2 class="mission-para" data-aos="fade-up" >Mission</h2><hr> </div>
+  <center><h2 class="mission-para" data-aos="fade-up" >Mission</h2><hr></center>   </div>
     <br>
     <p id="mission-para"> India is a knowledge economy, one that creates, disseminates, and uses knowledge to enhance its growth and development. The Team of Whatisnext believe that knowledge can empower the youth into a national asset by providing proper education and guidance.</p>
   </div>
  
-  <div class="col-md-6 mt-3 mb-3 " >
+  <div class="col-md-6 mt-5 mb-5 " >
       <div  data-aos="fade-up">
-    <h2 class="mission-para " data-aos="fade-up"  >Vission</h2>  <hr/></div>
+        <center><h2 class="mission-para" data-aos="fade-up" >Vission</h2><hr></center></div>
    <br>
     <p id="mission-para" >At Whatisnext.in, we are passionate about education and believe that it is the key to unlocking a world of opportunities. We are dedicated to helping our clients succeed and reach their full potential.</p>
   </div>
@@ -303,10 +303,10 @@ typewriter();
  <style>
 hr{
   border: none;
-  border-top: 3px solid #180c86;
+  border-top: 3px solid #3a3280;
   width: 160px;
   margin: 0;
-  float: left;
+  
 }
  </style>
 <header><h1 >
