--- a/team.html
+++ b/team.html
@@ -124,10 +124,10 @@
     <div class="col-md-6">
       <img src="images/website ceo-1 (1).jpg" alt="team member image" class="img-fluid">
     </div>
-    <div id="teams-para" class="col-md-6" style="text-align: justify;  padding-left: 5%; padding-right: 5%;">
+    <div id="teams-para" class="col-md-6" style="text-align: justify;  padding-left: 5%; padding-right: 5%; ">
       <h2 class="name">AMAL MURALI</h2>
       <h6 class="name">Co-Founder & CEO</h6>
-      <p >With
+      <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;" >With
                   over 5 years of experience in education as a Career Counsellor
                   , Amal has Good leadership skills in any role, at any level.
                   And He Coming up with the idea of forming the company and
@@ -142,11 +142,11 @@
 </div>
     </div>
   </div>
-  <div class="row mt-5" id="row-space">
-    <div id="teams-para" class="col-md-6 order-md-2 ml-5" style="text-align: justify; padding-left: 2%; padding-right: 5%;  margin-top: 8%; ">
+  <div class="row mt-5"  id="row-space">
+    <div id="teams-para" class="col-md-6 order-md-2 ml-5" style="text-align: justify; margin-left: 0px; padding-left: 5%; padding-right: 5%;margin-top: 80px;">
       <h2 class="name">Mohammed Sajjad A K</h2>
        <h6 class="name">Founder & MD</h6>
-      <p >With over 8
+      <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">With over 8
                 years of experience in education as a Career Counsellor, Sajjad
                 has won the Award for "Young Entrepreneur of the year 2020" in
                 the Education Sector from Genius Education Service, Dubai, UAE
