--- a/contact.html
+++ b/contact.html
@@ -347,8 +347,8 @@ color: #000; }
 <div class="col-lg-10">
 <div class="row g-lg-5">
 <div class="col-md-7 text-lg-right">
-<h2 class="mb-0">Newsletter - Stay tune and get the latest update</h2>
-<p>Far far away, behind the word mountains</p>
+  <h2 class="mb-0">Get weekly updates in your inbox</h2>
+  <p>Newsletter subscription</p>
 </div>
 <div class="col-md-5 border-left d-flex align-items-center">
 <form action="#" class="subscribe-form">
