--- a/about.html
+++ b/about.html
@@ -355,7 +355,7 @@
   
   </a>
   </h2>
-  <p style="color: #d5d5d5;">Whatisnext.in mentors have shaped the future of 3000+ students and working professionals based on their skill, background and dream.</p>
+  <p class="footer-quote" style="color: #d5d5d5;">Whatisnext.in mentors have shaped the future of 3000+ students and working professionals based on their skill, background and dream.</p>
   <ul class="ftco-footer-social list-unstyled mt-2">
   <li><a href="https://www.linkedin.com/company/whatisnext-in/"><span class="fa fa-linkedin"></span></a></li>
   <li><a href="https://www.facebook.com/profile.php?id=100066432039919&mibextid=LQQJ4d"><span class="fa fa-facebook"></span></a></li>
