--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="icon" href="images/WIN Logo.png" type="image/icon type">
 <script src="https://kit.fontawesome.com/76272be822.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="your_website_domain/css_root/flaticon.css">
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-6qijLpAS8gdpsJLVoIZ+MUgSDw0bjWk91vffZQ6mbNl6r3qjW8ASvFy71R+rIz6xwUyeW8Yv5A5P9Dmztg+Ibg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -755,19 +756,19 @@ font-weight: 550;
 .feature i {
   font-size: 48px;
   margin-bottom: 20px;
-  color: #000000;
+  color: #fdfdfd;
 }
 
 .feature h2 {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
-  color: #0e0d0d;
+  color: #f6ff00;
 }
 
 .feature p {
   font-size: 15px;
-  color: #000000;
+  color: #ffffff;
 }
 
 
@@ -795,7 +796,7 @@ font-weight: 550;
   }
   .feature p {
   font-size: 10px;
-  color: #000000;
+  color: #ffffff;
 }
 .feature h2 {
   font-size: 10px;
@@ -820,14 +821,7 @@ font-weight: 550;
   width: 300px;
   margin: 10px;
   padding: 10px;
-   /* fallback for old browsers */
-   background: #4facfe;
-  
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, rgba(79,172,254,0.5), rgba(0,242,254,0.5));
-
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, rgba(79,172,254,0.5), rgba(0,242,254,0.5))
+  background: radial-gradient(circle at 1.8% 4.8%, rgb(17, 23, 58) 0%, rgb(58, 85, 148) 90%);;
 }
 
 #load-more-btn {
@@ -1075,6 +1069,7 @@ window.onclick = function(event) {
   </div>
   <div class="col-md-3 col-sm-4 col-xl-2 text-center d-flex align-items-stretch " data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
   <a href="#" class="services-2">
+    
   <div class="icon"><span class="flaticon-magnifying-glass"></span></div>
   <div class="text">
    <h2 class="card-name">Ayurvedic Courses</h2>
@@ -1352,7 +1347,7 @@ window.onclick = function(event) {
 
 </a>
 </h2>
-<p style="color: #d5d5d5;">Whatisnext.in mentors have shaped the future of 3000+ students and working professionals based on their skill, background and dream.</p>
+<p class="footer-quote" style="color: #d5d5d5;">Whatisnext.in mentors have shaped the future of 3000+ students and working professionals based on their skill, background and dream.</p>
 <ul class="ftco-footer-social list-unstyled mt-2">
 <li><a href="https://www.linkedin.com/company/whatisnext-in/"><span class="fa fa-linkedin"></span></a></li>
 <li><a href="https://www.facebook.com/profile.php?id=100066432039919&mibextid=LQQJ4d"><span class="fa fa-facebook"></span></a></li>
