--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@ font-weight: 550;
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
-  color: #f6ff00;
+  color: #f6ff00 !important;
 }
 
 .feature p {
@@ -1523,23 +1523,21 @@ window.onclick = function(event) {
 </div>
 <div class="col-md-6 col-lg-2">
 <div class="ftco-footer-widget mb-4">
-<h2 class="ftco-heading-2">Explore</h2>
+<h2 class="ftco-heading-2">Quick Links</h2>
 <ul class="list-unstyled">
-<li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>About Us</a></li>
-<li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Services</a></li>
-<li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Courses</a></li>
-<li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Contact us</a></li>
+<li><a href="about.html"><span class="ion ion-ios-arrow-round-forward me-2"></span>About Us</a></li>
+<li><a href="courses.html"><span class="ion ion-ios-arrow-round-forward me-2"></span>Courses</a></li>
+<li><a href="application-form.html"><span class="ion ion-ios-arrow-round-forward me-2"></span>Regration Form</a></li>
+<li><a href="contact.html"><span class="ion ion-ios-arrow-round-forward me-2"></span>Contact us</a></li>
 
 </ul>
 </div>
 </div>
 <div class="col-md-6 col-lg-2">
 <div class="ftco-footer-widget mb-4">
-<h2 class="ftco-heading-2">Quick Links</h2>
+<h2 class="ftco-heading-2">Admissions</h2>
 <ul class="list-unstyled">
-<li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Contact Us</a></li>
-<li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Terms &amp; Conditions</a></li>
-<li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Feedbacks</a></li>
+<li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Download Brochure</a></li>
 <li><a href="images/Whatisnext.in Application Form 23-24 (3).pdf" download><span class="ion ion-ios-arrow-round-forward me-2"></span>
   scholarship Form
 </a></li>
@@ -1551,7 +1549,7 @@ window.onclick = function(event) {
 </style>
 <div class="col-md-6 col-lg">
 <div class="ftco-footer-widget mb-4">
-<h2 class="ftco-heading-2">Have a Questions?</h2>
+<h2 class="ftco-heading-2">Reach Us</h2>
 <div class="block-23 mb-3">
 <ul>
 <li><a href="https://g.co/kgs/kQBsSD"><span class="icon fa fa-map marker"></span><span class="text">Whatisnext. in Edu Website ( Office ) 2nd floor, 706, 2nd Cross Rd, HRBR Layout 1st Block, Subbaiahnapalya, Banaswadi, Bengaluru, Karnataka 560043</span></a></li>
@@ -1567,7 +1565,7 @@ window.onclick = function(event) {
 </div>
 
 <div class="col-md-12 text-center">
-  <p class="mb-0 mt-0" style="font-size: 14px; color: #d7d7d7;">&copy;2023 whatisnext. All Rights Reserved </p>
+  <p class="mb-0 mt-0" style="font-size: 14px; color: #d7d7d7;">&copy;2023 whatisnextin. All Rights Reserved </p>
   </div>
 
 
