--- a/application-form.html
+++ b/application-form.html
@@ -1135,7 +1135,7 @@
                             </div>
                         </div>
                     </div>
-                    <h3 class="name text-center mb-5" style="color: #4538d5;">Name of Institution  last Attended </h3>
+                    <h3 class="name text-center mb-5" style="color: #4538d5; font-weight: bold">Name of Institution  last Attended </h3>
                     <div class="form-row  m-b-55">
                         <div class="name"> 10th</div>
                         <div class="value">
