--- a/application-form.html
+++ b/application-form.html
@@ -858,12 +858,12 @@
         <i  class="fa fa-bars"></i>
       </label>
       <ul >
-         <li class="nav-item"><a class="nav-link " href="/">Home</a></li>
-<li class="nav-item"><a class="nav-link" href="/courses">Courses</a></li>
-<li class="nav-item"><a class="nav-link " href="/team">About Us</a></li>
-<li class="nav-item"><a class="nav-link active" href="/Registration-form">Register</a></li>
-
-<li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="courses.html">Courses</a></li>
+        <li class="nav-item"><a class="nav-link  " href="team.html">About Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="application-form.html">Register</a></li>
+        
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </nav>
 
