--- a/index.html
+++ b/index.html
@@ -1561,12 +1561,13 @@ window.onclick = function(event) {
 </div>
 </div>
 </div>
+<div class="col-md-12 text-center">
+  <p class="mb-0 mt-0" id="copy-right" >&copy;2023 whatisnextin. All Rights Reserved </p>
+  </div>
 </div>
 </div>
 
-<div class="col-md-12 text-center">
-  <p class="mb-0 mt-0" style="font-size: 14px; color: #d7d7d7;">&copy;2023 whatisnextin. All Rights Reserved </p>
-  </div>
+
 
 
 
