--- a/courses.html
+++ b/courses.html
@@ -564,7 +564,7 @@
   background: radial-gradient(circle at 1.8% 4.8%, rgb(17, 23, 58) 0%, rgb(58, 85, 148) 90%);;
 }
 
-#load-more-btn {
+#load-more-btns {
   display: block;
   margin: 10px auto;
   padding: 10px 20px;
