--- a/index.html
+++ b/index.html
@@ -1042,61 +1042,73 @@ window.onclick = function(event) {
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/allied-health-symbol.png" alt="" class="course-icon" >
   <h3>Allied Health</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
   
 </div>
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/measure.png" alt="" class="course-icon" >
   <h3>Architecture</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
   
 </div>
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/computer-2.png" alt="" class="course-icon" >
   <h3>Computer</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
   
 </div>
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/Agriculture-card.png" alt="" class="course-icon" >
   <h3>Agriculture</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
   
 </div>
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/aviation.png" alt="" class="course-icon" >
   <h3>Aviation</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
   
 </div>
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/designing.png" alt="" class="course-icon" >
   <h3>Designing</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
   
 </div>
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/humanity.png" alt="" class="course-icon" >
   <h3>Arts and Humanities</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
   
 </div>
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/payment-method.png" alt="" class="course-icon" >
   <h3>Commerce</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
   
 </div>
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/ayurveda.png" alt="" class="course-icon" >
   <h3>Ayurveda</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
   
 </div>
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/audiology.png" alt="" class="course-icon" >
   <h3>Audiology</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
   
 </div>
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/dental-care.png" alt="" class="course-icon" >
   <h3>Dental</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
   
 </div>
 <div class="cardss" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
   <img src="images/card-icons/worker.png" alt="" class="course-icon" >
   <h3>Engineering</h3>
+  <a href="contact.html"><button class="responsive-button">Apply</button></a>
 </div>
 
 </div>
