--- a/courses.html
+++ b/courses.html
@@ -189,8 +189,8 @@
   margin: 0 auto;
   padding: 10px 20px;
   font-size: 13px;
-  background-color: #d1d106;
-  color: #fff;
+  background-color: #ffff00;
+  color: #040404;
   border: none;
   border-radius: 5px;
   cursor: pointer;
