--- a/index.html
+++ b/index.html
@@ -1161,8 +1161,8 @@ color: #777;
   margin: 0 auto;
   padding: 10px 20px;
   font-size: 13px;
-  background-color: #d1d106;
-  color: #fff;
+  background-color: #ffff00;
+  color: #000000;
   border: none;
   border-radius: 5px;
   cursor: pointer;
