--- a/index.html
+++ b/index.html
@@ -155,11 +155,12 @@
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </nav>
-<section class="hero-wrap" style="background-image: url('images/coo.jpg');">
+    
+<section class="hero-wrap" style="background-image: url('images/coo.jpg'); padding-top: ;">
 <div class="overlay"></div>
 <div class="container">
 <div class="row no-gutters slider-text align-items-center">
-<div class="col-lg-5">
+<div class="col-lg-5" style="margin-top: ;">
 <div class="text " data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
 <span class="subheading">MUST KNOW BEFORE CHOOSE</span>
 <h1 id="typedtext"> Are You Confused About Future?<br>
