--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	margin-top:16px;
 }
 
-    .img {
+    /* .img {
   vertical-align: middle;
   border-style: none; }
 .ftco-about {
@@ -79,7 +79,7 @@
     width: 100%; }
     @media (max-width: 767.98px) {
       .ftco-about .about-wrap {
-        height: 400px; } }
+        height: 100px; } }
   .ftco-about .img {
     -webkit-box-shadow: 0px 2px 25px -13px rgba(0, 0, 0, 0.26);
     -moz-box-shadow: 0px 2px 25px -13px rgba(0, 0, 0, 0.26);
@@ -116,7 +116,7 @@
   width: 100%; }
   @media (max-width: 767.98px) {
     .ftco-section {
-      padding: 6em 0; } }
+      padding: 6em 0; } } */
 
 
 #loadMore {
@@ -155,12 +155,12 @@
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    
-<section class="hero-wrap" style="background-image: url('images/coo.jpg'); padding-top: ;">
+  
+<section class="hero-wrap" style="background-image: url('images/confuse.jpg'); ">
 <div class="overlay"></div>
 <div class="container">
 <div class="row no-gutters slider-text align-items-center">
-<div class="col-lg-5" style="margin-top: ;">
+<div class="col-lg-5">
 <div class="text " data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
 <span class="subheading">MUST KNOW BEFORE CHOOSE</span>
 <h1 id="typedtext"> Are You Confused About Future?<br>
@@ -218,7 +218,7 @@ typewriter();
 </div>
 </div>
 </section>
-<button id="open-modal" class="fa-solid fa-file"></button>
+
 <section class="ftco-section ftco-no-pt ftco-no-pb">
 <div class="container-xl">
 <div class="row g-xl-5">
@@ -855,127 +855,7 @@ loadMoreBtn.addEventListener('click', function() {
   }
 });
 </script>
-<div id="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h2>Get Brochure</h2>
-   <form>
-    <div class="row">
-  <div class="form-group col-md-6">
-    <label for="name">Name:</label>
-    <input type="text" class="form-control" id="name" placeholder="Full Name" required>
-  </div>
- 
-   <div class="form-group col-md-6">
-    <label for="name">Mobile No:</label>
-    <input type="number" class="form-control" id="name" placeholder="Enter your mobile no:" required>
-  </div>
-   </div>
-  <div class="row">
-  <div class="form-group col-md-6">
-    <label for="email">Email address:</label>
-    <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
-  </div>
-<div class="form-group col-md-6">
-    <label for="name">Course:</label>
-    <input type="text" class="form-control" id="name" placeholder="Enter course" required>
-  </div>
-  </div>
-  <div class="form-group">
-    <label for="message">Message:</label>
-    <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
-  </div>
-  <button type="submit" class="btn btn-primary mt-4">Submit</button>
-</form>
-  </div>
-</div>
 
-<style>
-   /* The Modal */
-#modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgba(0,0,0,0.4); /* Black with opacity */
-}
-
- 
-   #open-modal{
-	position:sticky;
-	width:40px;
-	height:50px;
-	bottom:250px;
-	left: 1350px;
-	 background-image: linear-gradient(to bottom, #2133d8 0%, #38c3d3 100%);
-	color:#ffffff;
-	border-radius:50px;
-	text-align:center;
-    font-size:20px;
-    z-index:100;
-   }
-
-
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: 10% auto; /* 10% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
-
-/* Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-
-</style>
-
-<script>
-    // Get the modal
-var modal = document.getElementById("modal");
-
-// Get the button that opens the modal
-var btn = document.getElementById("open-modal");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-
-</script>
 
   
 <section class="ftco-section-counter img" style="background-image: url(images/image_6.jpg);">
